Wrapped Address header in div to prevent margin collapse

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -963,3 +963,6 @@ label.custom-file-upload {
     overflow: hidden
 }
 
+.heading-medium-prevent-margin-collapse {
+    padding-top: 0.1px
+}
